History of this buildout
========================

6.0.27 (unreleased)
-------------------

- Nothing changed yet.


6.0.26 (2016-10-31)
-------------------

- Fixed exporting subscribers.  We needed method POST.
  Looks like this has not been working for a while.  [maurits]


6.0.25 (2016-10-27)
-------------------

- MINA-159: Made all fields required on event subscription form.  This
  was tricky, as there was some non intuitive code here that tripped
  me up.  I clarified the code and made more distinction between
  authenticated and anonymous users.  [maurits]


6.0.24 (2016-08-30)
-------------------

- Products.PloneHotfix20160830 1.0.  [maurits]


6.0.23 (2016-07-15)
-------------------

- MINA-155 Add button styling for tinymce with upgrade step.  [lhuiskes]


6.0.22 (2016-06-13)
-------------------

- Only load Google Analytics on www.minaraad.be.  [jladage]


6.0.21 (2016-06-12)
-------------------

- Add Google Analytics code.  [jladage]


6.0.20 (2016-06-10)
-------------------

- MINA-151: Styling fixes as color to white and the correct font styling,
  Also remove the tooltip when there is a click.
  Remove login button for mobile.
  [lhuiskes]

- MINA-154: fixed error when adding a content item to a project.  This
  happened in an event handler in some project states where there was
  no committee set.  [maurits]

- MINA-153: Directly link to newsletter archive on mailchimp.com.
  Completely removed nieuwsbrieven page (mailchimp archive).  [maurits]

- MINA-151: Move inlog and logout to header underneath the search.
  and add a tooltip from jquery ui with timeout and custom styling.
  [lhuiskes]


6.0.19 (2016-06-02)
-------------------

- MINA-153: Fixed news letters page.  Fixed typo.  Used ``//`` instead
  of ``http://`` to avoid mixed content.  Removed styling on this
  page: it was commented out, and enabling it showed no difference.
  [maurits]


6.0.18 (2016-05-27)
-------------------
