@@ -4,7 +4,9 @@ History of this buildout
 6.0.27 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Check the email address before registering for an event.
+  I have seen several stuck mails that we were trying to
+  send to an invalid address.  [maurits]
 
 
 6.0.26 (2016-10-31)
